--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
           </div>
           <div class="form-group">
             <label for="desc">Task Description</label>
-            <textarea class="form-control" id="desc" name="desc" cols="30" rows="10"></textarea>
+            <textarea class="form-control" id="desc" name="desc" rows="10"></textarea>
           </div>
           <button type="submit" class="btn btn-primary my-3">Submit</button>
         </form>
