--- a/templates/edit_task.html
+++ b/templates/edit_task.html
@@ -1,15 +1,39 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit Task</title>
-    <!-- Include any necessary CSS or Bootstrap -->
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
-    <script src="https://cdn.ckeditor.com/ckeditor5/36.0.1/classic/ckeditor.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
-<body>
+    {% block css %}
+      <style>
+        .container{
+          min-height: 150vh;
+        }
+      </style>
+    {% endblock css %}
+    <script src="https://cdn.ckeditor.com/ckeditor5/36.0.1/classic/ckeditor.js"></script>
+    <title>Edit Task</title>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/">ToDo</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/task">Task</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+    </nav>
     <div class="container">
         <h1>Edit Task</h1>
         <!-- Form to edit task details -->
@@ -23,10 +47,15 @@
                 <label for="description" class="form-label">Task Description</label>
                 <textarea class="form-control" id="description" name="desc" rows="5" placeholder="Enter task description here">{{ task.taskDesc }}</textarea>
             </div>
-            <button type="submit" class="btn btn-primary">Update Task</button>
+            <button type="submit" class="btn btn-primary my-3">Update Task</button>
         </form>
     </div>
 
+    <footer class="bg-dark text-light fixed-bottom">
+        <p class="text-center py-1 my-0">
+        ToDo-add a task &copy; 2024 | All rights reserved
+        </p>
+    </footer>
     <!-- Include any necessary JavaScript or Bootstrap scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
@@ -37,6 +66,6 @@
           .catch(error => {
             console.error(error);
           });
-    </script>
+      </script>
 </body>
 </html>
