--- a/templates/task.html
+++ b/templates/task.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    {% block css %}
+      <style>
+        .container{
+          min-height: 200vh;
+        }
+      </style>
+    {% endblock css %}
     <title>Tasks - Todos list</title>
   </head>
   <body>
@@ -60,14 +67,12 @@
                 <tr>
                   <th scope="row">{{ forloop.counter }}</th>
                   <td>{{ task.taskTitle }}</td>
-                  <td>{{ task.taskDesc }}</td>
+                  <td>{{ task.taskDesc | safe }}</td>
                   <td>
-                    <a href="{% url 'edit_task' task.id %}" class="btn btn-primary">Edit Task</a>
-
-                    <!-- Delete Button -->
+                    <a href="{% url 'edit_task' task.id %}" class="btn btn-primary">Edit</a>
                     <form action="{% url 'delete_task' task.id %}" method="post" style="display:inline;">
                       {% csrf_token %}
-                      <button type="submit" class="btn btn-danger">Delete</button>
+                      <button type="submit" class="btn btn-danger my-3">Delete</button>
                     </form>
                   </td>
                 </tr>
